#27. Fix nested modal overlapping

--- a/grails-app/assets/stylesheets/application.css
+++ b/grails-app/assets/stylesheets/application.css
@@ -100,3 +100,8 @@ select:disabled {
     right: 0;
     top: 0;
 }
+
+.modal-dialog {
+    width: inherit;
+    max-width: 600px;
+}
